--- a/client/src/components/Contest/ContestsContainer/ContestContainer.module.sass
+++ b/client/src/components/Contest/ContestsContainer/ContestContainer.module.sass
@@ -1,4 +1,6 @@
-
+.contestsContainer
+  width: 100%
+  
 .spinnerContainer
   display: flex
   flex: 1
