--- a/client/src/components/CustomerDashboard/CustomerDashboard.module.sass
+++ b/client/src/components/CustomerDashboard/CustomerDashboard.module.sass
@@ -31,8 +31,9 @@
   font-size: 18px
 
 .contestsContainer
+  min-width: 0
+  flex: 1
   @include flex($ai: stretch)
-  width: 100%
 
 .filterContainer
   box-sizing: border-box
